# tree-of-thought-llm-rust

./: Cargo.toml
logs/game24/: gpt-3.5-turbo_0.7_none_sample_1_start900_end1000.json
scripts/crosswords/: cot_sampling.sh  standard_sampling.sh
scripts/game24/: bfs.sh  cot_sampling.sh  standard_sampling.sh
scripts/text/: bfs.sh  cot_sampling.sh  standard_sampling.sh
src/: main.rs  models.rs  strings.rs  tasks.rs
