[package]
name = "tree-of-thought-llm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-openai = "0.10.3"
backoff = "0.4.0"
csv = "1.2.2"
dotenv = "0.15.0"
pico-args = "0.5.0"
serde_json = "1.0.97"
smol = "1.3.0"
