[package]
name = "tree-of-thought-llm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-openai = "0.10.3"
csv = "1.2.1"
dotenv = "0.15.0"
pico-args = "0.5.0"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
backoff = "0.4.0"
rand = "0.8.5"
